--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   <body>
     <h1>Harrison Hart</h1>
     <p>Baltimore based Photographer</p>
-    <a href="portfolio/index.html">Portfolio</a>
+    <p> <a href="portfolio/index.html">Portfolio</a> </p>
+
+    <h2> Admirable Websites </h2>
+
+    <p> <a href="week-one-website/index.html">Week One</a> </p>
+    <p> <a href="week-two-website/index.html">Week Two</a> </p>
+    <p> <a href="week-three-website/index.html">Week Three</a> </p>
+
+
+
   </body>
 </html>
