--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,6 +11,10 @@
 
     <a href="../index.html">Home</a>
 
-    <img src="../images/billmurray.jpg" alt="Bill Murray making funny face"> 
+    <p>
+    <img src="../images/thomasfitzpatrick.jpg" alt="Thomas getting shaved">
+    </p>
+
+
   </body>
 </html>
